update for heroku db

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,10 +56,10 @@ logger.play=INFO
 logger.application=DEBUG
 
 # DB1
-db.db1.url=${HEROKU_POSTGRESQL_JADE_URL}
+db.db1.url=${HEROKU_POSTGRESQL_AMBER}
 db.db1.driver=org.postgresql.Driver
 
 # DB2
-db.db2.url=${HEROKU_POSTGRESQL_PURPLE_URL}
+db.db2.url=${HEROKU_POSTGRESQL_CHARCOAL}
 db.db2.driver=org.postgresql.Driver
 
